--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -86,6 +86,19 @@
                     app:srcCompat="@mipmap/ic_launcher"/>
 
                 <Button
+                    android:id="@+id/appointmentLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@color/colorAccent"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:stateListAnimator="@null"
+                    android:text="@string/button_location"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"/>
+
+                <Button
                     android:id="@+id/btnAdd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -97,8 +110,8 @@
                     android:text="@string/button_addAppointment"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
+
             </LinearLayout>
         </ScrollView>
-
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
